# nova-os

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
boot/: Cargo.toml
boot/src/: main.rs
docs/: architecture.md  bootloader.md  roadmap.md
src/: allocator.rs  interrupts.rs  main.rs  memory.rs  paging.rs  scheduler.rs  swarm.rs
