[package]
name = "nova-os"
version = "0.1.0"
edition = "2021"
authors = ["Sven Normen Esslinger <esslinger@esslinger.co>"]
description = "Nova OS — Emotional swarm-based, self-improving operating system kernel for the decentralized NovaNet ecosystem."
license = "MIT"
repository = "https://github.com/digitaldesignerjazz/nova-os"

[dependencies]
# Bootloader (for producing bootable images)
bootloader = { version = "0.11", features = ["map_physical_memory"] }

# For later UART / serial output
uart_16550 = "0.3"

# Future: memory management, interrupts, etc.
# x86_64 = "0.15"
# spin = "0.9"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
