[package]
name = "nova-os"
version = "0.1.0"
edition = "2021"
authors = ["Sven Normen Esslinger <esslinger@esslinger.co>"]
description = "Nova OS — Emotional swarm-based, self-improving operating system kernel for the decentralized NovaNet ecosystem."
license = "MIT"
repository = "https://github.com/digitaldesignerjazz/nova-os"

[package.metadata.bootloader]
map-physical-memory = true

[dependencies]
bootloader = { version = "0.11", features = ["map_physical_memory"] }
uart_16550 = "0.3"
linked_list_allocator = "0.10"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
